# scraper

./: .gitignore  latest.csv  latest.json  pyproject.toml  requirements.txt  script.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml  run.yml
scraper/: client.py  model.py  scraper.py
src/scraper/: __main__.py  api.py  app.py  client.py  decorators.py  model.py  output.py  scraper.py
tests/: fuel_price_data.json  store_data.json  test_model.py
